--- a/styles/components/_modal.scss
+++ b/styles/components/_modal.scss
@@ -20,13 +20,15 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100%;
-    border-radius: 0;
+    margin: 15px;
+    // height: 100%;
+    border-radius: 10px;
     background-color: $bodyColor;
     background-size: cover;
     animation: growInCool 0.4s cubic-bezier(0.17, 0, 0, 1) forwards;
+    padding: 40px 20px 40px;
     @media screen and (min-width: $small) {
-      border-radius: 10px;
+      margin: auto;
       display: block;
       height: auto;
       padding: 40px 60px 40px;
